# particle-sim

./: Cargo.toml  flake.nix  index.html  justfile  rust-toolchain.toml
assets/: manifest.json  particles.js
src/: helpers.rs  lib.rs  main.rs
